--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,5 @@
-certifi==2020.6.20
-wincertstore==0.2
-certifi==2020.6.20
 scapy==2.4.3
-wincertstore==0.2
-certifi==2020.6.20
-chardet==3.0.4
-idna==2.10
 requests==2.24.0
 scapy==2.4.3
 urllib3==1.25.9
-wincertstore==0.2
+python-nmap==0.6.1
